--- a/app/src/main/res/layout/fragment_miss.xml
+++ b/app/src/main/res/layout/fragment_miss.xml
@@ -110,7 +110,7 @@
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:background="@android:color/holo_blue_dark"
-            android:text="Пропустить"
+            android:text="Проебать"
             android:textColor="@android:color/white"
             tools:layout_editor_absoluteX="233dp"
             tools:layout_editor_absoluteY="624dp" />
@@ -121,7 +121,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:background="@android:color/holo_red_dark"
-            android:text="Пропустить"
+            android:text="Проебать"
             android:textColor="@android:color/white" />
     </LinearLayout>
 
