--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/missFragment"
-        android:name="com.memebattle.proebat.fragment.MissFragment"
+        android:name="com.memebattle.proebat.features.fragment.MissFragment"
         android:label="fragment_miss"
         tools:layout="@layout/fragment_miss" >
         <action
@@ -16,17 +16,17 @@
     </fragment>
     <fragment
         android:id="@+id/settingsFragment"
-        android:name="com.memebattle.proebat.fragment.SettingsFragment"
+        android:name="com.memebattle.proebat.features.fragment.SettingsFragment"
         android:label="fragment_settings"
         tools:layout="@layout/fragment_settings" />
     <fragment
         android:id="@+id/statisticFragment"
-        android:name="com.memebattle.proebat.fragment.statistics.StatisticFragment"
+        android:name="com.memebattle.proebat.features.fragment.statistics.StatisticFragment"
         android:label="fragment_statictis"
         tools:layout="@layout/fragment_statictis" />
     <fragment
         android:id="@+id/alreadyMissFragment"
-        android:name="com.memebattle.proebat.fragment.AlreadyMissFragment"
+        android:name="com.memebattle.proebat.features.fragment.AlreadyMissFragment"
         android:label="fragment_already_miss"
         tools:layout="@layout/fragment_already_miss" />
 </navigation>
